fix square logo on safari and other small screens

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -733,11 +733,12 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
   color: transparent;
   font: 0/0 a;
   text-shadow: none;
-  background: transparent url(/static/img/usv-logo-square-white-27h.png?v=2) no-repeat center center; }
+  background: transparent url(/static/img/usv-logo-square-white-27h.png?v=3) no-repeat center center; }
+  
   @media only screen and (-webkit-min-device-pixel-ratio: 1.3), only screen and (min--moz-device-pixel-ratio: 1.3), only screen and (-o-min-device-pixel-ratio: 1.3 / 1), only screen and (min-resolution: 125dpi), only screen and (min-resolution: 1.3dppx) {
     #logo {
-      background: transparent url(/static/img/logo_2x.png) no-repeat center center;
-      background-size: 212px 109px; } }
+      /*background: transparent url(/static/img/logo_2x.png) no-repeat center center;
+      background-size: 212px 109px;*/ } }
 
 #main-nav {
   position: absolute;
